data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_647.wast
;; 8. **Test: Loop with Else Branch**    - **Description**: Loop within an `if-else` construct, including `br` and `br_if` in both `if` and `else`.    - **Constraint Being Checked**: Correct nesting and branching within conditionals in a loop.    - **Mismanagement**: Incorrect identification of `if` and `else` boundaries affecting loop.

(assert_invalid
  (module
    (func $loop_with_if_else
      (block 
        (loop $label (param i32)
          (i32.const 1)
          (if (i32.const 0)
            (then
              (br $label)
            )
            (else
              (br_if $label (i32.const 1))
            )
          )
        )
      )
    )
  )
  "type mismatch"
)